# payment-simulator

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  main.py  pyproject.toml  run.py
app/: __init__.py
app/config/: database.py  envVars.py
app/errors/: handlers.py
app/models/: transactions.py
app/routes/: __init__.py  example.py  transaction.py
app/services/: fraud_service.py
app/utils/: logger.py
data/: transactions.csv
migrations/versions/: 34bfb6783323_add_status_and_fraud_fields_to_.py
models/fraud_detection/: predict.py  preprocess.py  train.py  utils.py
models/transaction-detection/: plot_metrics.py  run_prediction.py  run_single_test.py  run_training.py
models/transaction-detection/tests/: test_preprocess.py  test_train.py
test/: test_db.py
