[project]
name = "payment-simulation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask",
    "flask-sqlalchemy",
    "flask-migrate",
    "python-dotenv",
    "psycopg2-binary",
    "flask-cors"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
